<resources>
    <string name="app_name">MyJoy</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Masukan Username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Masukan Password</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register_here"><u>Register Here</u></string>
    <string name="forgot">forgot?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="alamat">Alamat</string>
    <string name="no_hp">No. Hp</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="home">HOME</string>
    <string name="calendar">CALENDAR</string>
    <string name="service">SERVICE</string>
    <string name="giving">GIVING</string>
    <string name="my_account">ACCOUNT</string>


    <string name="rationale_camera">Aplikasi ini membutuhkan akses kamera anda.</string>
    <string name="rationale_file">Aplikasi ini membutuhkan akses ke File Directory anda.</string>
    <string name="WEB_SERVER">https://dev.projectlab.co.id/mit/1317016/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">WELCOME</string>
    <string name="video">VIDEO</string>
    <string name="logout">Logout</string>
    <string name="lupa_password_klik_disini"><u>lupa password? klik disini</u></string>
    <string name="edit_profile">Edit</string>
    <string name="my_history">My History</string>
    <string name="tanggal_persembahan">Tanggal Persembahan</string>
    <string name="jumlah_persembahan">Jumlah Persembahan</string>
    <string name="_0">0</string>
    <string name="rp_10_000">Rp. 10.000</string>
    <string name="rp_50_000">Rp. 50.000</string>
    <string name="rp_25_000">Rp. 25.000</string>
    <string name="pilih_jenis_persembahan">Pilih Jenis Persembahan</string>
    <string name="masukkan">Masukkan</string>
    <string name="jenis_persembahan">Jenis Persembahan</string>
    <string name="perpuluhan">Perpuluhan</string>
    <string name="persembahan">Persembahan</string>
    <string name="persembahan_pembangunan">Persembahan Pembangunan</string>
    <string name="persembahan_misi">Persembahan Misi</string>
    <string name="pembangunan_tk_harapan">Pembangunan TK Harapan</string>
    <string name="rp_100_000">Rp. 100.000</string>
    <string name="bulan">Bulan</string>
    <string name="pilih_bulan">Pilih Bulan</string>
    <string name="pilih_bulan_dan_tahun">Pilih Bulan dan Tahun</string>
    <string name="bulan_dan_tahun">Bulan dan Tahun</string>
    <string name="loading">loading</string>
    <string name="cari_video">Cari Video</string>
    <string name="podcast">podcast</string>
    <string name="cari_podcast">Cari Podcast</string>
    <string name="cari_jemaat">Cari Jemaat</string>
    <string name="confirm">Confirm</string>
    <string name="masukan_username_atau_password">Masukan Username Atau Password</string>
    <string name="masukan_username_atau_email">Masukan Username atau Email</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="masukan_kode_verifikasi">Masukan Kode Verifikasi</string>
    <string name="resend_code_klik_here">Resend Code? Klik here</string>
    <string name="verification">Verification</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="new_password">New Password</string>
    <string name="masukan_kembali_password">Masukan Kembali Password</string>
    <string name="masukan_kembali_password_baru">Masukan kembali password baru</string>
    <string name="masukan_password_baru">Masukan password baru</string>
    <string name="profile">Profile</string>
    <string name="preview">Preview</string>
    <string name="cancel">Cancel</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="theme">Theme</string>
    <string name="pembicara">Pembicara</string>
    <string name="wl">WL</string>
    <string name="music">Music</string>
    <string name="singer">Singer</string>
    <string name="multimedia">Multimedia</string>
    <string name="choir">Choir</string>
    <string name="dancer">Dancer</string>
    <string name="banner">Banner</string>
    <string name="nama_pelayan">Nama Pelayan</string>
    <string name="pelayanan">Pelayanan</string>
    <string name="jenis_pelayanan">Jenis Pelayanan</string>
    <string name="pilih_jenis_pelayanan">Pilih Jenis Pelayanan</string>
    <string name="sub">Submit</string>
    <string name="baptis">BAPTIS</string>
    <string name="waktu">Waktu</string>
    <string name="pilih_waktu">Pilih Waktu</string>
    <string name="persyaratan_numur_minimal_12_tahun_nmengikuti_baptisan_air_dapat_ditempuh_dengan_2_cara_nlulus_kelas_m1_nlulus_katekisasi_baptisan_air">Persyaratan\nUmur Minimal 12 Tahun\nMengikuti Baptisan Air dapat ditempuh dengan 2 cara :\nLulus Kelas M1 \nLulus Katekisasi Baptisan Air</string>
    <string name="sabtu">Sabtu</string>
    <string name="jumat">Jumat</string>
    <string name="kamis">Kamis</string>
    <string name="rabu">Rabu</string>
    <string name="selasa">Selasa</string>
    <string name="senin">Senin</string>
    <string name="minggu">Minggu</string>
    <string name="cell_group">Cell Group</string>
    <string name="perihal">Perihal</string>
    <string name="masukan_alamat_anda">Masukan Alamat Anda</string>
</resources>
