<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_myaccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MyAccountFragment">



    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="168dp"
        android:layout_marginTop="@dimen/activity_margin_medium"
        android:layout_height="168dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/nameAccount"
        android:layout_marginBottom="@dimen/activity_margin_medium_large"
        android:src="@drawable/default_user"
        android:background="@drawable/rounded_form"
        tools:ignore="ContentDescription" />



    <TextView
        android:id="@+id/nameAccount"
        android:paddingTop="@dimen/activity_margin_small_medium"
        android:paddingBottom="@dimen/activity_margin_small_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_medium_large"
        android:paddingStart="@dimen/activity_margin_small_medium"
        android:layout_marginEnd="@dimen/activity_margin_medium_large"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_name"
        android:drawablePadding="@dimen/activity_margin_medium"
        android:textSize="@dimen/sub_form_value"
        android:text="@string/nama_lengkap"
        android:layout_above="@+id/emailAccount"
        android:background="@drawable/my_account_form_top"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/emailAccount"
        android:paddingTop="@dimen/activity_margin_small_medium"
        android:paddingBottom="@dimen/activity_margin_small_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/contactAccount"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="@dimen/activity_margin_medium"
        android:layout_marginStart="@dimen/activity_margin_medium_large"
        android:paddingStart="@dimen/activity_margin_small_medium"
        android:layout_marginEnd="@dimen/activity_margin_medium_large"
        android:textColor="@color/black"
        android:textSize="@dimen/sub_form_value"
        android:text="@string/email"
        android:background="@drawable/my_account_form_first"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/contactAccount"
        android:paddingTop="@dimen/activity_margin_small_medium"
        android:paddingBottom="@dimen/activity_margin_small_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableStart="@drawable/ic_phone_number"
        android:drawablePadding="@dimen/activity_margin_medium"
        android:layout_marginStart="@dimen/activity_margin_medium_large"
        android:paddingStart="@dimen/activity_margin_small_medium"
        android:layout_marginEnd="@dimen/activity_margin_medium_large"
        android:textColor="@color/black"
        android:textSize="@dimen/sub_form_value"
        android:text="@string/no_hp"
        android:background="@drawable/my_account_form"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/usernameAccount"
        android:paddingTop="@dimen/activity_margin_small_medium"
        android:paddingBottom="@dimen/activity_margin_small_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="@dimen/activity_margin_medium"
        android:layout_marginStart="@dimen/activity_margin_medium_large"
        android:paddingStart="@dimen/activity_margin_small_medium"
        android:layout_marginEnd="@dimen/activity_margin_medium_large"
        android:textColor="@color/black"
        android:textSize="@dimen/sub_form_value"
        android:layout_below="@+id/contactAccount"
        android:text="@string/username"
        android:background="@drawable/my_account_form"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/birthAccount"
        android:paddingTop="@dimen/activity_margin_small_medium"
        android:paddingBottom="@dimen/activity_margin_small_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_birthdate"
        android:drawablePadding="@dimen/activity_margin_medium"
        android:layout_marginStart="@dimen/activity_margin_medium_large"
        android:paddingStart="@dimen/activity_margin_small_medium"
        android:layout_marginEnd="@dimen/activity_margin_medium_large"
        android:textColor="@color/black"
        android:textSize="@dimen/sub_form_value"
        android:layout_below="@+id/usernameAccount"
        android:text="@string/tanggal_lahir"
        android:background="@drawable/my_account_form"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/alamatAccount"
        android:paddingTop="@dimen/activity_margin_small_medium"
        android:paddingBottom="@dimen/activity_margin_small_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_pin"
        android:drawablePadding="@dimen/activity_margin_medium"
        android:layout_marginStart="@dimen/activity_margin_medium_large"
        android:paddingStart="@dimen/activity_margin_small_medium"
        android:layout_marginEnd="@dimen/activity_margin_medium_large"
        android:textColor="@color/black"
        android:textSize="@dimen/sub_form_value"
        android:layout_below="@+id/birthAccount"
        android:text="@string/alamat"
        android:background="@drawable/my_account_form"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/pekerjaanAccount"
        android:paddingTop="@dimen/activity_margin_small_medium"
        android:paddingBottom="@dimen/activity_margin_small_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_work"
        android:drawablePadding="@dimen/activity_margin_medium"
        android:layout_marginStart="@dimen/activity_margin_medium_large"
        android:paddingStart="@dimen/activity_margin_small_medium"
        android:layout_marginEnd="@dimen/activity_margin_medium_large"
        android:textColor="@color/black"
        android:textSize="@dimen/sub_form_value"
        android:layout_below="@+id/alamatAccount"
        android:text="@string/pekerjaan"
        android:background="@drawable/my_account_form_bottom"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/activity_margin_medium_large"
        android:layout_marginEnd="@dimen/activity_margin_medium_large"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_margin_medium_large">

        <Button
            android:id="@+id/editProfile"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_edit"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/edit_profile"
            android:textColor="@color/colorAccent"
            android:elevation="@dimen/elevation"
            android:textSize="@dimen/sub_form"
            android:paddingTop="@dimen/activity_margin_small"
            android:layout_marginEnd="@dimen/activity_margin_medium_large"
            android:paddingBottom="@dimen/activity_margin_small"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/logout"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_danger"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/logout"
            android:layout_marginStart="@dimen/activity_margin_medium_large"
            android:elevation="@dimen/elevation"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_form"
            android:paddingTop="@dimen/activity_margin_small"
            android:paddingBottom="@dimen/activity_margin_small"
            tools:ignore="ButtonStyle" />
    </LinearLayout>




</RelativeLayout>

